--- a/index.html
+++ b/index.html
@@ -2,15 +2,16 @@
 <html lang="en">
 <head>
     <title>Financial Literacy Website</title>
+    <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>Creative Literacy</h1>
+        <h1>Kreative Literacy</h1>
         <nav>
             <ul>
                 <li><a href="https://kmartin30.github.io/reading-notes">About</a></li>
-                <li><a href="https://kmartin30.github.io/cloudrevisions">Resources</a></li>
-                <li><a href="https://kmartin30.github.io/htmlresources">Links</a></li>
+                    <li><a href="https://kmartin30.github.io/cloudrevisions">Resources</a></li>
+                        <li><a href="https://kmartin30.github.io/htmlresources">Links</a></li>
             </ul>
         </nav>
     
