--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
     <header>
         <h1>Kreative Literacy</h1>
+        <h2><a href="https://kmartin30.github.io/reading-notes">About</a></h2>
         <nav>
             <ul>
-                <li><a href="https://kmartin30.github.io/reading-notes">About</a></li>
-                    <li><a href="https://kmartin30.github.io/cloudrevisions">Resources</a></li>
-                        <li><a href="https://kmartin30.github.io/htmlresources">Links</a></li>
+                <li><a href="https://kmartin30.github.io/cloudrevisions">Resources</a></li>
+                <li><a href="https://kmartin30.github.io/htmlresources">Links</a></li>
             </ul>
         </nav>
     
