Interacting with JS

--- a/index.html
+++ b/index.html
@@ -14,8 +14,7 @@
                 <li><a href="https://kmartin30.github.io/htmlresources">Links</a></li>
             </ul>
         </nav>
-    
-
+    <script src="app.js"></script>
     </header>
 
     <main>
