--- a/index.html
+++ b/index.html
@@ -6,22 +6,22 @@
 </head>
 <body>
     <header>
+        <nav>
         <h1>Kreative Literacy</h1>
         <h2><a href="https://kmartin30.github.io/reading-notes">About</a></h2>
-        <nav>
-            <ul>
-                <li><a href="https://kmartin30.github.io/cloudrevisions">Resources</a></li>
-                <li><a href="https://kmartin30.github.io/htmlresources">Links</a></li>
-            </ul>
+        <h3><a href="https://kmartin30.github.io/cloudrevisions">Resources</a></h3>
+        <h4><a href="https://kmartin30.github.io/htmlresources">Links</a></h4>
         </nav>
     <script src="app.js"></script>
     </header>
 
     <main>
         <img src="https://images.unsplash.com/photo-1579621970588-a35d0e7ab9b6?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8N3x8ZmluYW5jaWFsfGVufDB8fDB8fHww" alt="MoneyCoins"/>
+        <script>document.write("<h3>Mission & Values</h3>")</script>
+
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet est placerat in egestas erat imperdiet. Cras pulvinar mattis nunc sed blandit libero volutpat sed cras. Congue quisque egestas diam in arcu cursus euismod. Risus viverra adipiscing at in tellus. In eu mi bibendum neque egestas. Non curabitur gravida arcu ac tortor dignissim convallis aenean. Massa ultricies mi quis hendrerit dolor magna eget est. Massa tincidunt dui ut ornare lectus sit amet est. Sed tempus urna et pharetra pharetra massa massa ultricies.</p>
         <section>
-            <h2>Contact</h2>
+            <button onclick="printinfo()">Contact</button>
             <p>Director K.Middleton 405-901-8990</p>
             <h3><a href="https://www.ynab.com/blog/9-inspiring-financial-stories">Testimonies</h3>
         </section>
