--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             
             <h3><a href="https://www.ynab.com/blog/9-inspiring-financial-stories">Testimonies</h3>
         </section>
+        <script>rateMyPage(); response();</script>
 
     </main>
 
